test/compile_error/missing_info_test.exs
defmodule ApicalTest.CompileError.MissingInfoTest do
  use ExUnit.Case, async: true

  test "this"
end
